# library

./: .gitignore  README.md  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 0bbd51f68b66_init.py  157bc2d2da05_init.py  1741970c2bb7_init.py  1ae85c8ef9a7_init.py  36411b6cf179_init.py  40dc749d82b9_init.py  5d0435f5b94c_init.py  b42694c8447e_init.py
app/: database.py  main.py
app/auth/: jwt.py
app/core/: config.py
app/crud/: book.py  borrowed_book.py  reader.py  user.py
app/models/: __init__.py  book.py  borrowed_book.py  reader.py  user.py
app/routers/: auth.py  book.py  borrowed_book.py  readers.py
app/schemas/: book.py  borrowed_book.py  reader.py  user.py
tests/: conftest.py  test_auth.py  test_books.py  test_borrow.py  test_readers.py
